@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
-DEPEND=sys-apps/portage dev-lang/python[readline] dev-lang/python
-DESCRIPTION=Replacement for 'emerge --search' with search-index
-EAPI=3
-HOMEPAGE=http://david-peter.de/esearch.html
-IUSE=linguas_fr linguas_it
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris
-LICENSE=GPL-2
-RDEPEND=sys-apps/portage dev-lang/python[readline] dev-lang/python
-SLOT=0
-SRC_URI=mirror://github/fuzzyray/esearch/esearch-1.3.tar.gz
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	distutils	92e738ea29389cb3f34778d7a349ac71	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=5e754df8e7fefe6c9ed3ac78a9755792
