@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/esearch
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.126 2015/03/02 22:27:33 fuzzyray Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/esearch/ChangeLog,v 1.127 2015/03/02 22:32:09 fuzzyray Exp $
+
+  02 Mar 2015; Paul Varner <fuzzyray@gentoo.org> -esearch-1.3.ebuild:
+  Remove old version
 
   02 Mar 2015; Paul Varner <fuzzyray@gentoo.org> esearch-1.3-r1.ebuild,
   esearch-9999.ebuild:
